Added "Steering" draft- steering instructions screen
Signed-off-by: Przemyslaw Stawczyk <przemek.stawczyk@gmail.com>

--- a/src/spaceinvaders/view/view.Menu.fxml
+++ b/src/spaceinvaders/view/view.Menu.fxml
@@ -14,7 +14,7 @@
                      <Font size="48.0" />
                  </font>
              </Button>
-             <Button fx:id="optionsBTN" maxHeight="150.0" maxWidth="500.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" text="Options" textAlignment="JUSTIFY">
+             <Button fx:id="steeringBTN" maxHeight="150.0" maxWidth="500.0" minHeight="50.0" minWidth="200.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="400.0" text="Steering" textAlignment="JUSTIFY">
                  <font>
                      <Font size="48.0" />
                  </font></Button>
