--- a/src/spaceinvaders/view/view.Game.fxml
+++ b/src/spaceinvaders/view/view.Game.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,27 +10,24 @@
       <Canvas height="550.0" width="800.0" BorderPane.alignment="CENTER" />
    </center>
    <top>
-      <HBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+      <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="resetBTN" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Reset" textAlignment="CENTER">
+            <Label fx:id="scoreLBL" minHeight="-Infinity" prefHeight="50.0" text="Score : " AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="0.0">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+            <Button fx:id="returnBTN" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Return to Menu" AnchorPane.rightAnchor="50.0">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
-            <Label fx:id="scoreLBL" minHeight="-Infinity" prefHeight="50.0" prefWidth="450.0" text="Score : ">
-               <font>
-                  <Font size="24.0" />
-               </font>
-               <HBox.margin>
-                  <Insets left="40.0" right="40.0" />
-               </HBox.margin>
-            </Label>
-            <Button fx:id="returnBTN" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Return to Menu">
+            <Button fx:id="resetBTN" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Reset" textAlignment="CENTER" AnchorPane.leftAnchor="50.0">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
          </children>
-      </HBox>
+      </AnchorPane>
    </top>
 </BorderPane>
