Added FXML - configuration subfolder
Signed-off-by: Przemyslaw Stawczyk <przemek.stawczyk@gmail.com>

--- a/src/spaceinvaders/view/FXML/W800/view.Game.fxml
+++ b/src/spaceinvaders/view/FXML/W800/view.Game.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.view.ControllerGame">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerGame">
    <center>
       <Canvas height="550.0" width="800.0" BorderPane.alignment="CENTER" />
    </center>
