--- a/src/spaceinvaders/view/FXML/W800/view.Steering.fxml
+++ b/src/spaceinvaders/view/FXML/W800/view.Steering.fxml
@@ -3,9 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.*?>
-<?import java.lang.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerSteering">
    <top>
       <AnchorPane BorderPane.alignment="TOP_RIGHT">
@@ -26,7 +25,7 @@
    <center>
       <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" height="50.0" layoutX="250.0" layoutY="345.0" stroke="BLACK" strokeType="INSIDE" width="310.0">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" height="80.0" layoutX="372.0" layoutY="231.0" stroke="BLACK" strokeType="INSIDE" width="80.0">
                <fill>
                   <LinearGradient endX="0.7904761904761904" endY="0.10952380952380952" startX="0.3952380952380953" startY="1.0">
                      <stops>
@@ -37,7 +36,7 @@
                      </stops>
                   </LinearGradient>
                </fill></Rectangle>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="250.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" width="60.0">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="262.0" layoutY="201.0" stroke="BLACK" strokeType="INSIDE" width="60.0">
                <fill>
                   <LinearGradient endX="1.0" endY="0.2523809523809524" startX="0.5428571428571429" startY="0.4952380952380952">
                      <stops>
@@ -48,7 +47,7 @@
                      </stops>
                   </LinearGradient>
                </fill></Rectangle>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="500.0" layoutY="200.0" stroke="BLACK" strokeType="INSIDE" width="60.0">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" height="60.0" layoutX="502.0" layoutY="201.0" stroke="BLACK" strokeType="INSIDE" width="60.0">
                <fill>
                   <LinearGradient endX="1.0" endY="0.2523809523809524" startX="0.5428571428571429" startY="0.4952380952380952">
                      <stops>
@@ -59,46 +58,34 @@
                      </stops>
                   </LinearGradient>
                </fill></Rectangle>
-            <Text layoutX="374.0" layoutY="379.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Space">
+            <Text layoutX="387.0" layoutY="288.0" strokeType="OUTSIDE" strokeWidth="0.0" text="W">
+               <font>
+                  <Font size="50.0" />
+               </font>
+            </Text>
+            <Text layoutX="388.0" layoutY="342.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fire">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <Text layoutX="386.0" layoutY="431.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fire">
+            <Text layoutX="227.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Left">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <Line endX="15.0" layoutX="284.0" layoutY="231.0" startX="-15.0" strokeWidth="3.0" />
-            <Polygon layoutX="540.0" layoutY="240.0" rotate="90.0" scaleX="0.2" scaleY="0.2" stroke="BLACK" strokeType="INSIDE">
-              <points>
-                <Double fx:value="-50.0" />
-                <Double fx:value="40.0" />
-                <Double fx:value="50.0" />
-                <Double fx:value="40.0" />
-                <Double fx:value="0.0" />
-                <Double fx:value="-60.0" />
-              </points>
-            </Polygon>
-            <Line endX="15.0" layoutX="530.0" layoutY="230.0" startX="-15.0" strokeWidth="3.0" />
-            <Polygon layoutX="270.0" layoutY="240.0" rotate="270.0" scaleX="0.2" scaleY="0.2" stroke="BLACK" strokeType="INSIDE">
-               <points>
-                  <Double fx:value="-50.0" />
-                  <Double fx:value="40.0" />
-                  <Double fx:value="50.0" />
-                  <Double fx:value="40.0" />
-                  <Double fx:value="0.0" />
-                  <Double fx:value="-60.0" />
-               </points>
-            </Polygon>
-            <Text layoutX="227.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Left">
+            <Text layoutX="464.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Right">
                <font>
                   <Font size="24.0" />
                </font>
             </Text>
-            <Text layoutX="469.0" layoutY="291.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Move Right">
+            <Text layoutX="277.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="A">
                <font>
-                  <Font size="24.0" />
+                  <Font size="45.0" />
+               </font>
+            </Text>
+            <Text layoutX="515.0" layoutY="246.0" strokeType="OUTSIDE" strokeWidth="0.0" text="D">
+               <font>
+                  <Font size="45.0" />
                </font>
             </Text>
          </children>
