--- a/src/spaceinvaders/view/FXML/W800/view.Game.fxml
+++ b/src/spaceinvaders/view/FXML/W800/view.Game.fxml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" onKeyPressed="#keyOnActionHandler" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerGame">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyOnActionHandler" prefHeight="850.0" prefWidth="800.0" style="-fx-background-color: #000020" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerGame">
    <center>
-      <Canvas fx:id="gameCanvas" height="550.0" width="800.0" BorderPane.alignment="CENTER" />
+      <Canvas fx:id="gameCanvas" height="800.0" width="800.0" BorderPane.alignment="CENTER" />
    </center>
    <top>
-      <AnchorPane BorderPane.alignment="CENTER">
+      <HBox BorderPane.alignment="CENTER">
          <children>
-            <Label fx:id="scoreLBL" minHeight="-Infinity" prefHeight="50.0" text="Score : " AnchorPane.leftAnchor="300.0" AnchorPane.topAnchor="0.0">
+            <Button fx:id="resetBTN" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: DARKRED;" text="Reset" textAlignment="CENTER" textFill="WHITE" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="35.0" />
+               </HBox.margin>
+            </Button>
+            <Label fx:id="scoreLBL" alignment="CENTER" maxWidth="1.7976931348623157E308" minHeight="-Infinity" prefHeight="50.0" prefWidth="500.0" text="Score : " textFill="#f00000" textOverrun="CLIP">
+               <font>
+                  <Font size="36.0" />
                </font>
             </Label>
-            <Button fx:id="returnBTN" alignment="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Main Menu" AnchorPane.rightAnchor="50.0">
+            <Button fx:id="returnBTN" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="180.0" style="-fx-background-color: DARKRED;" text="Main Menu" textFill="WHITE" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="24.0" />
                </font>
-            </Button>
-            <Button fx:id="resetBTN" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" text="Reset" textAlignment="CENTER" AnchorPane.leftAnchor="50.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <HBox.margin>
+                  <Insets right="35.0" />
+               </HBox.margin>
             </Button>
          </children>
-      </AnchorPane>
+      </HBox>
    </top>
 </BorderPane>
