--- a/src/spaceinvaders/view/FXML/W800/view.Game.fxml
+++ b/src/spaceinvaders/view/FXML/W800/view.Game.fxml
@@ -2,13 +2,21 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyOnActionHandler" prefHeight="850.0" prefWidth="800.0" style="-fx-background-color: #000020" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerGame">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#keyPressedActionHandler" onKeyReleased="#keyRelasedActionHandler" onKeyTyped="#keyTypedActionHandler" prefHeight="850.0" prefWidth="800.0" style="-fx-background-color: #000020" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="spaceinvaders.controller.ControllerGame">
    <center>
-      <Canvas fx:id="gameCanvas" height="800.0" width="800.0" BorderPane.alignment="CENTER" />
+      <AnchorPane BorderPane.alignment="CENTER">
+         <children>
+            <Canvas fx:id="gameCanvas" height="800.0" width="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+            <Label fx:id="gameMessage" alignment="CENTER" contentDisplay="CENTER" layoutX="0.0" layoutY="350.0" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="59.0" prefWidth="800.0" textAlignment="CENTER" textFill="RED" AnchorPane.leftAnchor="6.0" AnchorPane.rightAnchor="-6.0">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
+         </children>
+      </AnchorPane>
    </center>
    <top>
       <HBox BorderPane.alignment="CENTER">
@@ -37,6 +45,7 @@
                   <Insets right="35.0" />
                </HBox.margin>
             </Button>
+            <Label text="Label" />
          </children>
       </HBox>
    </top>
